openshift/services/registry-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: registry-service
  namespace: collector-platform
  labels:
    app: registry-service
    component: microservice
    tier: backend
spec:
  to:
    kind: Service
    name: registry-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
